# flagrant

./: .gitignore  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  wrangler.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  enhancement.yml  support.yml
.github/workflows/: ci.yml  docs.yml
.vale/config/vocabularies/Aclaf/: accept.txt
docs/: index.md  overview.md
docs/.includes/: unreleased.md
docs/.overrides/: main.html
docs/explanation/: architecture.md  argument-files.md  behavior.md  concepts.md  configuration.md  dictionary-parsing.md  errors.md  grammar.md  index.md  parser.md  testing.md  types.md
docs/explanation/comparisons/: argparse.md  click.md  cyclopts.md  index.md  typer.md
docs/reference/: glossary.md  index.md
docs/reference/api/: flagrant.completions.md  flagrant.constants.md  flagrant.constraints.md  flagrant.enums.md  flagrant.exceptions.md  flagrant.md  flagrant.parser.md  flagrant.parsing.md  flagrant.protocols.md  flagrant.specification.md  flagrant.types.md  index.md
src/flagrant/: __init__.py  _arity.py  _configuration.py  _parser.py  configuration.py  constants.py  constraints.py  defaults.py  enums.py  exceptions.py  protocols.py  specification.py  types.py  validations.py
src/flagrant/completions/: __init__.py  _bash.py  _completer.py  _configuration.py  _fish.py  _powershell.py  _protocols.py  _result.py  _zsh.py
src/flagrant/parser/: __init__.py  _context.py  _handlers.py  _parser.py  _resolver.py  _result.py  _state.py  exceptions.py
src/flagrant/parsing/: __init__.py  _configuration.py  _parser.py  _result.py
src/flagrant/specification/: __init__.py  _arity.py  _command.py  _factories.py  _options.py  enums.py  exceptions.py  helpers.py  validations.py
tests/: conftest.py
tests/benchmarks/: conftest.py  test_completion_benchmarks.py
tests/benchmarks/microbenchmarks/: test_parsing_benchmarks.py
tests/fuzz/: conftest.py  test_completion_fuzz.py  test_parsing_fuzz.py  test_specification_fuzz.py
tests/integration/: conftest.py  test_cli_scenarios.py  test_completion_integration.py  test_complex_scenarios.py  test_configuration_effects.py  test_dict_behavior.py  test_edge_cases.py  test_error_handling.py  test_flag_behavior.py  test_grammar_compliance.py  test_list_behavior.py  test_parsing_integration.py  test_positional_behavior.py  test_real_world_patterns.py  test_scalar_behavior.py
tests/properties/: conftest.py  test_completion_properties.py  test_parsing_properties.py  test_specification_properties.py
tests/unit/: test_configuration.py  test_constraints.py  test_exceptions.py  test_types.py
tests/unit/completions/: conftest.py  test_bash.py  test_completer.py  test_completer_configuration.py  test_completion_result.py  test_fish.py  test_powershell.py  test_zsh.py
tests/unit/parser/: conftest.py  test_command_resolver.py  test_dict_handler.py  test_exceptions.py  test_flag_handler.py  test_flag_options.py  test_list_handler.py  test_parse_context.py  test_parse_result.py  test_parse_state.py  test_parser.py  test_scalar_handler.py
tests/unit/parsing/: conftest.py  test_accumulation_modes.py  test_arity_edge_cases.py  test_arity_enforcement.py  test_error_paths.py  test_flags_and_negative.py  test_greedy_mode.py  test_inline_values.py  test_inline_values_advanced.py  test_inline_values_edge_cases.py  test_inline_values_without_equals.py  test_option_abbreviation.py  test_option_prefix_matching.py  test_parse_result.py  test_parser.py  test_parser_configuration.py  test_strict_posix.py  test_subcommand_abbreviation.py  test_subcommand_routing.py  test_token_classification.py  test_ungrouped_positionals.py  test_value_parsing.py  test_value_splitting.py
tests/unit/specification/: conftest.py  test_arity.py  test_command_specification.py  test_dict_option_specification.py  test_factories.py  test_flag_option_specification.py  test_helpers.py  test_list_option_specification.py  test_scalar_option_specificaton.py  test_specification_exceptions.py
